[package]
name = "header"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"

[dev-dependencies]
anyhow = "1.0.86"
assert_cmd = "2.0.14"
assert-panic = "1.0.1"
predicates = "3.1.0"
pretty_assertions = "1.4.0"
rand = "0.8.5"
